--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -13,19 +13,13 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
+a{
   text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
+  color: #f9f9f9;
 }
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
   min-width: 320px;
   min-height: 100vh;
 }
